<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_rectangle" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/products_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30"
        android:background="@color/bg_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="@dimen/margin_30"
                android:text="@string/e_notes"
                android:textColor="@color/text_ash"
                android:textSize="@dimen/text_size" />

            <ImageButton
                android:id="@+id/imgCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.08"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/title_color"
            android:text="@string/progress_enotes"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor_title"
            android:layout_marginTop="@dimen/margin_3"
            android:text="@string/progress_enotes_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_10"
            android:textColor="@color/title_color"
            android:text="@string/summary_enotes"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor_title"
            android:layout_marginTop="@dimen/margin_3"
            android:text="@string/summary_enotes_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_10"
            android:textColor="@color/title_color"
            android:text="@string/handoff_enotes"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor_title"
            android:layout_marginTop="@dimen/margin_3"
            android:text="@string/handoff_enotes_desc"/>

    </LinearLayout>



</LinearLayout>