<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_rectangle" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/products_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30"
        android:background="@color/bg_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/text_ash"
                android:textSize="@dimen/text_size_small" />

            <ImageButton
                android:id="@+id/imgCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.08"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/validations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginVertical="@dimen/margin_5"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlResetAcuity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txtResetAcuity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetAcuity"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTransferPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txtTransferPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_patient"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDischargePatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txtDischargePatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discharge_patient"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlActivityLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txtActivityLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_activity_log"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rleNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txteNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_enotes"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>