<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_rectangle"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/products_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30"
        android:background="@color/bg_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/filter_by"
                android:textColor="@color/text_ash"
                android:textSize="@dimen/text_size_small" />

            <ImageButton
                android:id="@+id/imgCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_cancel"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.08"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/validations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlAcuity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txtAcuity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/census_acuity"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imgAcuity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_right"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_4"
            android:padding="@dimen/margin_4">

            <TextView
                android:id="@+id/txtActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/census_active"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />


            <ImageView
                android:id="@+id/imgActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_right"
                android:contentDescription="@string/todo" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAllConsult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_4"
            android:padding="@dimen/margin_4"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtAllConsult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/census_eConsult"
                android:textColor="@color/title_color"
                android:textSize="@dimen/text_size_small" />


            <ImageView
                android:id="@+id/imgAllConsult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_right"
                tools:ignore="ContentDescription" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>